# athena

./: .gitignore  README.md  pyproject.toml
athena/: config.py  db.py  google.py  outbox.py  render_markdown.py  reviews.py  rollups.py  server.py  source_docs.py  state.py  sync.py  synthesis.py  taskctl.py  transcripts.py  wiki_jobs.py  wiki_ops.py
athena/sql/: schema.sql
athena/static/: style.css
docs/: ARCHITECTURE.md  ASSISTANT_RUNTIME.md  COMPOUNDING_WIKI.md  CURRENT_STATE.md  GSTACK_OPENCLAW.md  IMPLEMENTATION_PLAN.md  JOB_SPECS.md  OPENCLAW_INTEGRATION.md  PRIVATE_REPO_PLAN.md  WIKI_EXPERIENCE.md  WIKI_IMPLEMENTATION_SPEC.md
tests/: test_google.py  test_outbox.py  test_parity.py  test_render_markdown.py  test_reviews.py  test_rollups.py  test_server.py  test_state.py  test_sync.py  test_taskctl.py  test_transcripts.py  test_wiki_jobs.py  test_wiki_ops.py
